<resources>
    <string name="app_name">TKash</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="verification_reminder">A verification Code will be sent to your Phone Number</string>
    <string name="task_activity">Tasks</string>
    <string name="history_title">History</string>
    <string name="welcomeText">Hellow dear!</string>
    <string name="mcq">MCQ</string>

    <string name="admobAppId">ca-app-pub-2759360481725592~2152245579</string>
    <string name="firstBannerAdUnitId">ca-app-pub-2759360481725592/9797450233</string>
    <string name="secondBannerAdUnitId">ca-app-pub-2759360481725592/2380735465</string>
    <string name="InterstitialAd">ca-app-pub-2759360481725592/3339018949</string>
    <string name="RewardVideo">ca-app-pub-2759360481725592/5383710239</string>

    <!--TestIds-->

    <string name="TestAdmobID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="TestBannerID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="TestInterstitialID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="TestRewardVideoID">ca-app-pub-3940256099942544/5224354917</string>

    <string name="admobTestId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="BannerTestAdUnitId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="testDeviceId">2C750EBF11C8D60CC8D31D18C832AFEB</string>
    <string name="testDeviceEmulator">0E191E02CED02D02AF60A59956D2C82A</string>
    <string name="InterstitialTest">ca-app-pub-3940256099942544/1033173712</string>
    <string name="InerstitialTestVideo">ca-app-pub-3940256099942544/8691691433</string>

    <string name="textline1">*মিনিমাম পেমেন্ট রিচার্জ- ২১ টাকা</string>
    <string name="textline2">*মিনিমাম বিকাশ পেমেন্ট- ১০৫ টাকা</string>
    <string name="textline3">*মিমিমাম রকেট পেমেন্ট- ১০৫ টাকা</string>
    <string name="textline4">*****</string>
    <string name="textline5">★‌ প্রতি দিন সবোর্চ্চ ১৫ টাকা করে Earn করতে পারবেন!</string>
    <string name="textline6">নিয়ম</string>
    <string name="textline7">১) এই app এ কাজ করতে পারবেন ১ ঘন্টা ৩০ মিনিট থেকে ২ ঘন্টায় ৩ টি ট্যাক্স।</string>
    <string name="textline8">২) প্রতি ট্যাক্স ১ টাকা করে পাবেন এবং শুধু মাত্র ২নং ট্যাক্স এ ৫০ পয়সা।</string>
    <string name="textline9">৩) Vpn. ব্যাবহার করতে পারবে না (VPN Use করলে তার Account Blocked করা হবে )</string>
    <string name="textline10">৪) app open করার পর Start Quiz click করবেন। আপনার সামনে ৩ টি ট্যাক্স দেখাবে। Task 1 click করবেন। এখানে impression এবং click দেখাবে। ২৫-৩০ টা impression ads দেখার পর impression অনেক সময় ২৫,২৬,২৭,২৮,২৯,৩০ নাম্বার ads আসার পর ads click করতে হবে এবং ৪০ সেকেন্ড অপেক্ষা করতে হবে। ৪০ সেকেন্ড অপেক্ষা করার পর completed লেখা দেখার পর ট্যাক্স ফিরে আসবেন। ৪০ সেকেন্ড শেষ হবার আগেই task ফিরে আসলে টাকা যদি যোগ হয় তাহলে withdraw সময় টাকা কেটে রাখা হবে তাই সাবধান। ads click করার পর যে browser pages open হবে সে page এ ঘুরাঘুরি করবেন। বসে থাকবেন না। ১ থেকে ৩০ নাম্বার এড এবং অন্যান্য বেনার এড ও ক্লিক করবেন না। ক্লিক করলে একাউন্ট অটোমেটিক্যালি বন্ধ হয়ে যাবে। তাই সাবধান এ কাজ করবেন। Task 1 কাজ শেষ হলে Task 2 শুরু করবেন।Task 2 তে শুধু এড দেখবেন ক্লিক করবেন না। এ ভাবে Task 3 পর্যন্ত কাজ করবেন। সব ট্যাক্স শেষ করার পর ১ ঘন্টা ৩০ মিনিট থেকে ২ ঘন্টা অপেক্ষা করুন। তারপর আবার Task কাজ শুরু করতে পারবেন। ১ ঘন্টা ৩০ মিনিট থেকে ২ ঘন্টা পর আবার task কাজ করতে rest বাটনে ক্লিক করবেন এবং একটি video দেখাবে। video দেখার সময় শেষ হলে back বাটনে ক্লিক করে task কাজ শুরু করতে পারবেন।</string>
    <string name="textline11">৫)পেমেন্ট জন্য Withdraw বাটনে ক্লিক করুন। bkash/rocket/recharge নির্বাচন করুন। withdraw amount বসান এবং মোবাইল নাম্বার দিয়ে submit এ ক্লিক করুন। সব কিছু ঠিক থাকলে History তে বিবরণ দেখতে পাবেন। bkash/rocket ক্ষেত্রে একাউন্ট রেজিস্ট্রেশন নাম্বার হতে হবে। recharge জন্য ১ টাকা এবং bkash/rocket জন্য ৫ টাকা করে ফি কাটা হবে।</string>
    <string name="textline12">৭) আমাদের সাথে যোগাযোগ করার লিঙ্কগুলো মেনুবার এ দেওয়া আছে, join করতে ভুলবেন না</string>
    <string name="textline13">৮)একাউন্ট ব্লক হলে প্রথম বার খোলে দিয়া হবে ২৪ ঘন্টা পর ফ্রী। এর পর থেকে ২ টাকা করে কাটা হবে। এক সপ্তাহ ভিতরে পাঁচ বার ব্লক হলে একাউন্ট আজীবনের জন্য বন্ধ করে দেয়া হবে।</string>
    <string name="textline14">৯)★‌ সবাই একটি মোবাইলে একটি সিম নাম্বার দিয়ে একাউন্ট করবেন। একটি মোবাইলে এক এর অধিক সিম নাম্বার দিয়ে একাউন্ট করবেন না। যদি করেন তাহলে পেমেন্ট রিকোয়েস্ট দিলে পেমেন্ট পাবেন না।
নিয়ম মানলে ১০০% পেমেন্ট পাবেন। </string>
    <string name="textline15">১০)রেফারাল সিস্টেম, আপনি এপ রেফার করলে যাকে করবেন সে যদি রেফার কোড ব্যবহার করে তাহলে উভয়ে ১ টাকা বোনাস পাবেন। </string>
    <string name="textline16">১১) এখন থেকে সবাই টাকা withdraw দেয়ার পর Tkash admin এ আপনার রেফার কোড এর প্রথম ৪ সংখ্যা এবং টাকার পরিমাণ লিখে রাখবেন। (যেমন- jLu1/১০৫)
পেমেন্ট পাওয়ার পর Tkash admin এ screenshot দিবেন।</string>
    <string name="textline17">১২) যে কোন সমস্যা কথা এডমিন কে বলার জন্য মোবাইল নাম্বার না দিয়ে রেফার কোড এর প্রথম ৪ সংখ্যা দিবেন। যেমন- (আমার একাউন্ট ব্লক হয়েগেছে, একাউন্ট এক্টিভ করে দেন। refer code: uL21)। আবারো বলছি মোবাইল নাম্বার না দিয়ে রেফার কোড এর প্রথম ৪ সংখ্যা দিবেন।</string>
    <!--Telegram links-->
    <string name="telegramHelp">https://t.me/joinchat/IceMDFGYnoKRnYP-QDGYTg</string>
    <string name="telegramChannel">https://t.me/Tkashsupport</string>
    <string name="telegramAdmin">https://t.me/joinchat/IceMDFD5i2ZMaA7rZ536Ag</string>

    <!--invite texts-->
    <string name="inviteHeader">বন্ধুদের ইনভাইট করুন আর বোনাস নিন!</string>
    <string name="inviteDetails">এই কোডটি শেয়ার করুন বন্ধুদের এবং তারা যদি কোডটি ব্যাবহার করে তাহলে আপ্নারা উভয়েই ১ টাকা বোনাস পাবেন!</string>
    <string name="referCodePasteHeader">অন্য ইউজার এর দেওয়া রেফার কোডটি এখানে পেস্ট করুন</string>
    <string name="myReferCode">আপনার রেফার কোড:</string>
    <!--Bangla Alerts-->
    <string name="updateAlert">সুখবর! এপ এর নতুন আপডেট এসেছে, আপডেট করুন।</string>
    <string name="banTitle">আপনাকে ব্যান করা হয়েছে!</string>
    <string name="banDetails">উপ্স! আপনি নিয়ম না মানায় আপনাকে ব্যান করা হয়েছে, এডমিনের সাথে যোগাযোগ করুন</string>
</resources>
