<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/textline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/textline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/textline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="5dp"
                android:text="@string/textline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="5dp"
                android:text="@string/textline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="4dp"
                android:textStyle="bold"
                android:text="@string/textline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="2dp"
                android:text="@string/textline7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="2dp"
                android:text="@string/textline8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="2dp"
                android:text="@string/textline9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="2dp"
                android:text="@string/textline10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="2dp"
                android:text="@string/textline11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="2dp"
                android:text="@string/textline12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="2dp"
                android:text="@string/textline13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</android.support.v7.widget.CardView>